package recipeo.models;

public class CategoryModel {
}
