@startuml
'https://plantuml.com/class-diagram
RecipeDao o---- GetRecipeActivity
RecipeDao o--- GetRecipesForUserActivity
RecipeDao o---- GetRecipesForUserInCategoryActivity
RecipeDao o-- UpdateRecipeActivity
RecipeDao o--- SearchRecipeActivity
RecipeDao o-- CreateRecipeActivity

CategoryDao o-- CreateRecipeActivity
CategoryDao o-- UpdateRecipeActivity
CategoryDao o---- GetCategoryActivity
CategoryDao o--- UpdateCategoryActivity
CategoryDao o--- CreateCategoryActivity
CategoryDao o--- GetCategoriesForUserActivity


Category -- Recipe


class CreateRecipeActivity{
- recipeDao:RecipeDao
- categoryDao:CategoryDao
--
+ handleRequest(CreateRecipeRequest) : CreateRecipeResult
}

class GetRecipeActivity{
- recipeDao:RecipeDao
--
+ handleRequest(GetRecipeRequest) : GetRecipeResult
}

class GetRecipesForUserActivity{
- recipeDao:RecipeDao
--
+ handleRequest(GetRecipesForUserRequest) : GetRecipesForUserResult
}

class GetRecipesForUserInCategoryActivity{
- recipeDao:RecipeDao
--
+ handleRequest(GetRecipesForUserInCategoryRequest) : GetRecipesForUserInCategoryResult
}

class UpdateRecipeActivity{
- recipeDao:RecipeDao
- categoryDao:CategoryDao
--
+ handleRequest(UpdateRecipeRequest) : UpdateRecipeResult
}

class SearchRecipeActivity{
- recipeDao:RecipeDao
--
+ handleRequest(SearchRecipeRequest) : SearchRecipeResult
}

class UpdateCategoryActivity{
- categoryDao:CategoryDao
--
+ handleRequest(UpdateCategoryRequest) : UpdateCategoryResult
}

class GetCategoryActivity{
- categoryDao:CategoryDao
--
+ handleRequest(GetCategoryRequest) : GetCategoryResult
}

class GetCategoriesForUserActivity{
- categoryDao:CategoryDao
--
+ handleRequest(GetCategoriesForUserRequest) : GetCategoriesForUserResult
}

class CreateCategoryActivity{
- categoryDao:CategoryDao
--
+ handleRequest(CreateCategoryRequest) : CreateCategoryResult
}


class RecipeDao{
+ getRecipe(userId : String, recipeId : String) : Recipe
+ saveRecipe(recipe : Recipe) : Recipe
+ deleteRecipe(recipe : Recipe) : Recipe
+ getRecipesForUser(userId : String, filterType : RecipeFilter)
+ getRecipesForUserInCategory(userId : String, category : String)
+ searchRecipes(criteria : String[]) : List<Recipe>
}

class CategoryDao{
+ getCategory(userId : String, categoryName : String) : Category
+ getCategoriesForUser(userId : String) : Category
+ saveCategory(category : Category)
}


class Recipe {
- userId:String
- recipeId:String
- recipeName:String
- servings:Integer
- prepTime:Integer
- cookTime:Integer
- totalTime:Integer
- ingredients:List<String>
- instructions:List<String>
- categoryName
- tags:Set<String>
- lastAccessed:ZonedDateTime
- isFavourite:Boolean
}

class Category {
- userId:String
- categoryName:String
}


@enduml